add Renderer tests

--- a/app/Templates/greeting/footer.phtml
+++ b/app/Templates/greeting/footer.phtml
@@ -1,5 +1,7 @@
-<?php $this->block('footer') ?>
+<?php use Framework\Renderer\View; ?>
+
+<?php View::block('footer') ?>
 <footer>
     <h3><?=$var ?> FOOTER</h3>
 </footer>
-<?php $this->close() ?>
+<?php View::close() ?>
