--- a/app/Templates/greeting/header.phtml
+++ b/app/Templates/greeting/header.phtml
@@ -1,7 +1,8 @@
+<?php use Framework\Renderer\View; ?>
 
-<?php $this->block('header') ?>
+<?php View::block('header') ?>
 <header>
     <h3>MY PHP FRAMEWORK</h3>
 </header>
-<?php $this->close() ?>
+<?php View::close() ?>
 
