--- a/tests/framework/Renderer/templates/layout.phtml
+++ b/tests/framework/Renderer/templates/layout.phtml
@@ -1,5 +1,4 @@
 <?php use Framework\Renderer\View; ?>
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,17 +6,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My PHP Framework</title>
+    <title><?php View::block('title') ?>Layout Title<?php View::close() ?></title>
 </head>
 <body>
+<?php View::include('header.phtml') ?>
 
-<?php View::include('greeting/header.phtml')?>
+<?php View::block('content') ?>
+    <main class="main">
+        <h1>Layout Main</h1>
+    </main>
+<?php View::close() ?>
 
-<?php View::block('main')?>
-    <div class="main">
-        Empty main
-    </div>
-<?php View::close()?>
-
+<p><?=View::format('Y-m-d H:i') ?></p>
 </body>
 </html>
