--- a/app/Templates/greeting/main.phtml
+++ b/app/Templates/greeting/main.phtml
@@ -1,17 +1,11 @@
-<?php /** @var Framework\Renderer\Renderer $this */ ?>
+<?php use Framework\Renderer\View; ?>
 
-<?php $this->extends('greeting/layout.phtml');  ?>
+<?php View::extends('greeting/layout.phtml');  ?>
 
+<?php View::block('main') ?>
+    <div class="main">
+        <?php View::include('greeting/nav.phtml', $parameters) ?>
 
-<?php $this->block('main') ?>
-
-    <?php $this->include('greeting/header.phtml'); ?>
-
-    <h1><?= $var ?></h1>
-
-    <?php for ($i = 0; $i < 1; $i++): ?>
-        <?php $this->include('greeting/footer.phtml'); ?>
-    <?php endfor ?>
-<?php $this->close() ?>
-
-
+        <p><?=$text ?></p>
+    </div>
+<?php View::close() ?>
