--- a/app/Templates/greeting/layout.phtml
+++ b/app/Templates/greeting/layout.phtml
@@ -8,10 +8,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My PHP Framework</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
-
-<?php View::include('greeting/header.phtml')?>
 
 <?php View::block('main')?>
     <div class="main">
