--- a/app/Templates/greeting/layout.phtml
+++ b/app/Templates/greeting/layout.phtml
@@ -8,7 +8,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My PHP Framework</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="<?=View::assets('styles/styles.css')?>">
 </head>
 <body>
 
