--- a/app/Templates/greeting/header.phtml
+++ b/app/Templates/greeting/header.phtml
@@ -2,18 +2,16 @@
 
 <header class="header">
     <div class="center header__content">
-        <div class="logo header__logo">
-            <a href="<?=View::route('greeting')?>" class="logo__a">
-                <h1 class="logo__h1">MY PHP FRAMEWORK</h1>
-            </a>
-        </div>
-
         <nav class="nav header__nav">
+            <div class="nav__link">
+                <a href="<?=View::route('greeting')?>" class="nav__a nav__logo">
+                    MY PHP FRAMEWORK
+                </a>
+            </div>
+
             <div class="nav__link">
                 <a href="<?=View::route('doc')?>" class="nav__a">Documentation</a>
             </div>
         </nav>
     </div>
 </header>
-
-
