--- a/app/Templates/greeting/layout.phtml
+++ b/app/Templates/greeting/layout.phtml
@@ -8,15 +8,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My PHP Framework</title>
-    <link rel="stylesheet" href="<?=View::assets('styles/styles.css')?>">
+    <link rel="stylesheet" href="<?= View::assets('css/styles.css') ?>">
 </head>
 <body>
 
-<?php View::block('main')?>
-    <div class="main">
-        Empty main
-    </div>
-<?php View::close()?>
+<?php View::include('greeting/header.phtml') ?>
 
+<main class="main center">
+    <?php View::block('main') ?><?php View::close() ?>
+</main>
+
+<script src="<?= View::assets('js/script.js') ?>"></script>
 </body>
 </html>
