--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10,8 +10,6 @@ body {
 
 a {
     text-decoration: none;
-    transition-property: color;
-    transition-duration: .3s;
 }
 
 .center {
@@ -28,12 +26,6 @@ a {
     min-height: 55px;
 }
 
-.logo__h1 {
-    color: #ffffff;
-    font-size: 26px;
-    letter-spacing: 2px;
-}
-
 .header__nav {
     margin-left: 20px;
 }
@@ -42,7 +34,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
 }
 
 .nav__link {
@@ -51,11 +42,118 @@ a {
 
 .nav__a {
     padding: 5px 5px;
-    color: #bdbdbd;
+    font-size: 20px;
+    color: #9e9e9e;
     cursor: pointer;
+    letter-spacing: 2px;
+    transition-property: color;
+    transition-duration: .4s;
+}
+
+.nav__a_active {
+    color: #ffffff;
+}
+
+.nav__logo {
+    padding: 0;
+    margin-right: 25px;
+    font-size: 26px;
     letter-spacing: 2px;
 }
 
-.nav__a:hover {
-    color: #ffffff;
+/* MAIN */
+
+.main {
+    display: flex;
+    justify-content: center;
 }
+
+.main__jumbotron {
+    margin-top: 50px;
+}
+
+.main__doc {
+    margin-top: 30px;
+}
+
+.jumbotron {
+    display: flex;
+    flex-direction: column;
+    width: 900px;
+    height: 400px;
+    background-color: #eeeeee;
+    border-radius: 10px;
+    padding: 60px 90px;
+}
+
+.jumbotron__h1 {
+    display: flex;
+    flex-direction: column;
+    color: #424242;
+}
+
+.jumbotron__span-top {
+    font-size: 76px;
+    font-weight: normal;
+    letter-spacing: 20px;
+}
+
+.jumbotron__span-bottom {
+    margin-top: 30px;
+    margin-left: 100px;
+    font-weight: normal;
+    font-size: 40px;
+    letter-spacing: 5px;
+}
+
+.jumbotron__link {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 100px;
+}
+
+.jumbotron__a {
+    padding: 5px 5px;
+    font-size: 20px;
+    color: #9e9e9e;
+    cursor: pointer;
+    letter-spacing: 2px;
+    transition-property: color;
+    transition-duration: .4s;
+}
+
+.jumbotron__a:hover {
+    color: #424242;
+}
+
+/* DOC */
+
+.doc {
+    display: flex;
+    justify-content: space-around;
+    width: 1200px;
+}
+
+.doc__sidebar {
+    flex: 2;
+    height: 700px;
+    background-color: #eeeeee;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+.doc__content {
+    flex: 6;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    min-height: 100vh;
+    background-color: #eeeeee;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+
+
+
+
+
