--- a/app/Templates/index.phtml
+++ b/app/Templates/index.phtml
@@ -2,6 +2,7 @@
 
 <form action="/home" method="POST">
     <?=View::csrf() ?>
+    <?=View::method('PUT') ?>
     <input type="text" name="input">
     <input type="submit">
 </form>
